--- a/portfolio.html
+++ b/portfolio.html
@@ -134,9 +134,9 @@
           <h2>Projects</h2>
           <div class="grid">
             <article class="project">
-              <h3>My Project 1</h3>
-              <p class="muted">Klik untuk lihat detail project pertama.</p>
-              <div style="margin-top:8px"><a href="index1.html" class="btn" target="_blank">View</a></div>
+              <h3>My Project quotes</h3>
+              <p class="muted">Click to see project quotes details.</p>
+              <div style="margin-top:8px"><a href="quote.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
               <h3>My Project 2</h3>
