--- a/portfolio.html
+++ b/portfolio.html
@@ -134,14 +134,14 @@
           <h2>Projects</h2>
           <div class="grid">
             <article class="project">
-              <h3>My Project quotes</h3>
+              <h3>Quotes</h3>
               <p class="muted">Click to see project quotes details.</p>
               <div style="margin-top:8px"><a href="quote.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
-              <h3>My Project 2</h3>
-              <p class="muted">Klik untuk lihat detail project kedua.</p>
-              <div style="margin-top:8px"><a href="index2.html" class="btn" target="_blank">View</a></div>
+              <h3> -Text Editor- </h3>
+              <p class="muted">Click to see project Text Editor details</p>
+              <div style="margin-top:8px"><a href="Text_Editing.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
               <h3>My Project 3</h3>
