--- a/portfolio.html
+++ b/portfolio.html
@@ -140,13 +140,13 @@
             </article>
             <article class="project">
               <h3> -Text Editor- </h3>
-              <p class="muted">Click to see project Text Editor details</p>
+              <p class="muted">Click to see project Text Editor details.</p>
               <div style="margin-top:8px"><a href="Text_Editing.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
-              <h3>My Project 3</h3>
-              <p class="muted">Klik untuk lihat detail project ketiga.</p>
-              <div style="margin-top:8px"><a href="index3.html" class="btn" target="_blank">View</a></div>
+              <h3>Chatbox Ai✨</h3>
+              <p class="muted">Click to see project Text Editor details.</p>
+              <div style="margin-top:8px"><a href="Chatbox_Ai.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
               <h3>My Project 4</h3>
