--- a/portfolio.html
+++ b/portfolio.html
@@ -149,9 +149,9 @@
               <div style="margin-top:8px"><a href="Chatbox_Ai.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
-              <h3>My Project 4</h3>
-              <p class="muted">Klik untuk lihat detail project keempat.</p>
-              <div style="margin-top:8px"><a href="index4.html" class="btn" target="_blank">View</a></div>
+              <h3>Solar System Iframe</h3>
+              <p class="muted">Click to see project Solar System Iframe details.</p>
+              <div style="margin-top:8px"><a href="solar.html" class="btn" target="_blank">View</a></div>
             </article>
           </div>
         </div>
