--- a/portfolio.html
+++ b/portfolio.html
@@ -141,12 +141,12 @@
             <article class="project">
               <h3> -Text Editor- </h3>
               <p class="muted">Click to see project Text Editor details.</p>
-              <div style="margin-top:8px"><a href="Text_Editing.html" class="btn" target="_blank">View</a></div>
+              <div style="margin-top:8px"><a href="text_editing.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
               <h3>Chatbox Ai✨</h3>
               <p class="muted">Click to see project Text Editor details.</p>
-              <div style="margin-top:8px"><a href="Chatbox_Ai.html" class="btn" target="_blank">View</a></div>
+              <div style="margin-top:8px"><a href="chatbox_ai.html" class="btn" target="_blank">View</a></div>
             </article>
             <article class="project">
               <h3>Solar System Iframe</h3>
