--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
         <div class="card">
           <h2>Projects</h2>
           <div class="grid">
+           <article class="project">
+              <h3>Chat Stream</h3>
+              <p class="muted">Click to see project Chat Stream details.</p>
+             <div style="margin-top:8px"><a href="chattable.html" class="btn" target="_blank">View</a></div>
+            </article>
             <article class="project">
               <h3>Quotes</h3>
               <p class="muted">Click to see project quotes details.</p>
