--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header>
       <div class="nav">
         <div class="brand">
-          <div class="logo">P</div>
+          <div class="logo">si-athaa</div>
           <div>
             <div style="font-weight:700">PORTFOLIO</div>
             <div class="muted" style="font-size:12px">Simple & clean template</div>
