--- a/index.html
+++ b/index.html
@@ -3,285 +3,157 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sky Pixel - Atha Portfolio</title> <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>Portfolio - Simple Template</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* ============================================
-      SKY PIXEL THEME MODIFICATIONS 
-      ============================================
-    */
     :root{
-      --bg: #101828; /* Dark blue/black */
-      --card: rgba(0,0,0,0.7); /* Semi-transparent for content visibility over background */
-      --muted: #a0a8b9; /* Soft white/blue */
-      --accent: #ffee58; /* Bright yellow untuk aksen bintang */
-      --glass: rgba(255,255,255,0.03); 
+      --bg:#0f1724;
+      --card:#0b1220;
+      --muted:#9aa4b2;
+      --accent:#6ee7b7;
+      --glass: rgba(255,255,255,0.03);
     }
-    
     *{box-sizing:border-box}
-    /* Ganti font utama ke font pixel */
-    html,body{
-        height:100%;
-        margin:0;
-        font-family:'Press Start 2P', Consolas, monospace, system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
-        font-size: 12px; /* Ukuran font disesuaikan untuk keterbacaan font pixel */
-    }
-    
-    /* Terapkan gambar latar belakang */
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial}
     body{
-        background: url('sky_pixelbck.jpg') no-repeat center center fixed;
-        background-size: cover;
-        color:#e6eef6;
-        text-shadow: 1px 1px #000; /* Shadow untuk kontras teks */
+      /* Perubahan di sini: Hapus background gradient dan ganti dengan gambar */
+      background-image: url('sky_pixelbck.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      color:#e6eef6;
+      /* Akhir perubahan */
     }
-
     a{color:inherit;text-decoration:none}
     .container{max-width:980px;margin:0 auto;padding:28px}
 
     /* nav */
     header{position:sticky;top:12px;z-index:40}
-    .nav{
-        display:flex;align-items:center;justify-content:space-between;gap:16px;
-        background:rgba(0,0,0,0.8); /* Nav bar lebih gelap */
-        padding:8px 12px;
-        border-radius: 0; /* Kotak */
-        border: 2px solid var(--accent); /* Border pixel */
+    .nav{display:flex;align-items:center;justify-content:space-between;background:rgba(2,6,23,0.6);backdrop-filter:blur(10px);padding:12px;border-radius:12px;border:1px solid var(--glass)}
+    .nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
+    .nav a{font-weight:600;padding:6px 12px;border-radius:6px;transition:0.3s}
+    .nav a:hover{background:var(--glass)}
+    .burger{display:none;font-size:24px;cursor:pointer}
+    @media (max-width: 600px){
+      .nav ul{display:none;flex-direction:column;position:absolute;right:28px;top:68px;background:rgba(2,6,23,0.9);padding:10px;border-radius:8px;border:1px solid var(--glass)}
+      .burger{display:block}
     }
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{
-        width:44px;height:44px;
-        border-radius: 0; /* Kotak */
-        background: var(--accent); /* Warna aksen flat */
-        display:flex;align-items:center;justify-content:center;
-        color:#101828; /* Teks gelap di aksen terang */
-        font-weight:700;
-        font-size: 14px;
-    }
-    nav ul{display:flex;gap:14px;align-items:center;margin:0;padding:0;list-style:none}
-    .btn{
-        background: #333d4f; /* Base tombol gelap */
-        padding:8px 12px;
-        border-radius: 0; /* Kotak */
-        font-weight:600;
-        border: 2px solid #fff; /* Border putih pixel */
-        box-shadow: 2px 2px 0 #000; /* Shadow pixel */
-        transition: all 0.1s ease;
-    }
-    .btn:hover {
-        background: #4f5b72;
-        box-shadow: 1px 1px 0 #000;
-    }
+
+    /* main */
+    main{padding-top:40px;min-height:calc(100vh - 120px)}
 
     /* hero */
-    .hero{display:grid;grid-template-columns:1fr 320px;gap:28px;align-items:center;padding:32px 0}
-    .card{
-        background: var(--card); /* Overlay semi-transparan gelap */
-        padding:20px;
-        border-radius: 0; /* Kotak */
-        box-shadow: 4px 4px 0 #000; /* Shadow pixel besar */
-        border: 2px solid var(--accent); /* Border pixel */
-    }
-    /* Ukuran heading disesuaikan */
-    h1{margin:0;font-size:24px}
-    h2{font-size: 20px;}
-    h3{font-size: 14px;}
+    #hero{padding-top:60px;padding-bottom:60px;text-align:center}
+    #hero .avatar{width:150px;height:150px;border-radius:50%;margin-bottom:20px;object-fit:cover;border:4px solid var(--accent)}
+    #hero h1{font-size:48px;margin-bottom:10px;font-weight:700}
+    #hero h2{font-size:20px;color:var(--muted);margin-bottom:30px;font-weight:400}
+    .tag-line{display:inline-block;padding:8px 16px;background:var(--accent);color:#0f172a;border-radius:999px;font-weight:700;margin-top:20px}
+    .socials a{margin:0 10px;font-size:24px;transition:0.3s;color:var(--muted)}
+    .socials a:hover{color:var(--accent)}
 
-    .lead{color:var(--muted);margin-top:8px}
-    .hire{
-        display:inline-block;margin-top:14px;
-        padding:10px 16px;
-        border-radius: 0; /* Kotak */
-        background: var(--accent);
-        color:#101828; 
-        font-weight:700;
-        border: 2px solid #000;
-        box-shadow: 4px 4px 0 #000;
-    }
-
-    /* skills */
-    .skills{display:flex;flex-wrap:wrap;gap:8px;margin-top:12px}
-    .skill{
-        background: rgba(255,255,255,0.1);
-        padding:6px 8px;
-        border-radius: 0; /* Kotak */
-        font-weight:600;
-        border: 1px solid #fff;
-    }
+    /* section */
+    section{padding:40px 0;margin-bottom:40px;border-radius:12px;background:var(--card);border:1px solid var(--glass);box-shadow:0 10px 30px rgba(0,0,0,0.2)}
+    section h2{font-size:32px;border-bottom:2px solid var(--accent);display:inline-block;padding-bottom:5px;margin-bottom:20px;font-weight:600}
+    section p{line-height:1.6;color:var(--muted)}
 
     /* projects */
-    .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:14px;margin-top:16px}
-    .project{
-        padding:12px;
-        border-radius: 0;
-        background:var(--card);
-        border:1px solid rgba(255,255,255,0.1);
-        box-shadow: 2px 2px 0 #000;
-    }
-    .project h3{margin:0;font-size:16px}
-    .project p{color:var(--muted);font-size:12px}
+    .project-grid{display:grid;grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));gap:20px}
+    .project-card{background:#1e293b;padding:20px;border-radius:8px;transition:0.3s;border:1px solid rgba(255,255,255,0.1)}
+    .project-card:hover{transform:translateY(-5px);box-shadow:0 15px 35px rgba(0,0,0,0.3);background:#2d3a4c}
+    .project-card h3{font-size:20px;margin-top:0;color:var(--accent)}
+    .project-card a{display:inline-block;margin-top:10px;color:var(--accent);text-decoration:underline}
 
     /* contact */
-    form{display:grid;gap:10px}
-    input,textarea{
-        background:#1a2232; /* Background input gelap */
-        border:1px solid var(--accent); /* Border aksen */
-        padding:10px;
-        border-radius:0; /* Kotak */
-        color:inherit
-    }
-    textarea{min-height:120px}
+    #contact form input, #contact form textarea{width:100%;padding:12px;margin-bottom:15px;border:1px solid var(--muted);background:var(--card);color:#e6eef6;border-radius:6px}
+    #contact form input:focus, #contact form textarea:focus{border-color:var(--accent);outline:none}
+    .btn{background:var(--accent);color:#0f172a;padding:10px 20px;border:none;border-radius:6px;cursor:pointer;font-weight:600;transition:0.3s}
+    .btn:hover{opacity:0.9}
 
-    footer{
-        margin-top:36px;
-        color:var(--muted);
-        text-align:center;
-        padding:18px 0;
-        font-size: 10px;
-    }
-
-    /* responsive */
-    @media(max-width:900px){
-      .hero{grid-template-columns:1fr;}
-      .grid{grid-template-columns:1fr}
-      nav ul{display:none}
-      .mobile-menu{display:block}
-
-      /* Mobile Menu Overlay adjustments */
-      nav ul{
-        background: rgba(0,0,0,0.9) !important;
-        border: 2px solid var(--accent);
-        border-radius: 0;
-        box-shadow: 4px 4px 0 #000;
-      }
-    }
-    .mobile-menu{
-        display:none;
-        background: #333d4f !important;
-        border: 2px solid #fff;
-    }
-    .mobile-menu:hover{
-        background: #4f5b72 !important;
-    }
-
-    /* Small helpers */
-    .muted{color:var(--muted)}
-    .chip{display:inline-block;padding:6px 8px;border-radius:0;background:rgba(255,255,255,0.05);font-weight:600; border: 1px solid #fff;}
-
-    /* Image placeholder fix for pixel style */
-    .hero aside .card > div:first-child {
-        border-radius: 0 !important;
-        background: linear-gradient(180deg,var(--accent),#ffeea0) !important;
-        color: #101828 !important;
-        border: 2px solid #000;
-    }
-    /* ============================================
-      END SKY PIXEL THEME MODIFICATIONS 
-      ============================================
-    */
+    /* footer */
+    footer{text-align:center;padding:20px 0;color:var(--muted);border-top:1px solid var(--glass)}
   </style>
 </head>
 <body>
   <div class="container">
     <header>
-      <div class="nav">
-        <div class="brand">
-          <div class="logo">ATHA</div> 
-          <div>
-            <div style="font-weight:700">P O R T F O L I O</div>
-            <div class="muted" style="font-size:10px">S I M P L E • P I X E L</div>
-          </div>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#home" class="btn">H O M E</a></li>
-            <li><a href="#about" class="btn">A B O U T</a></li>
-            <li><a href="#skills" class="btn">S K I L L S</a></li>
-            <li><a href="#projects" class="btn">P R O J E C T S</a></li>
-            <li><a href="#contact" class="btn">C O N T A C T</a></li>
-          </ul>
-        </nav>
-        <div class="mobile-menu btn" onclick="toggleMobile()">M E N U</div>
-      </div>
+      <nav class="nav">
+        <a href="#hero" style="font-size:1.5em;color:var(--accent);font-weight:700">Atha.</a>
+        <ul id="main-nav">
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="burger" onclick="toggleMobile()">☰</div>
+      </nav>
     </header>
 
     <main>
-      <section id="home" class="hero">
-        <div class="card">
-          <h1>H E Y, W H A T’S U P? I’M <span style="color:var(--accent)">A T H A</span></h1>
-          <p class="lead">F R O N T E N D • D E V | A B S U R D • D E V , sometimes serious . C R E A T E • S I M P L E • W E B S I T E S , G A M E S • A N D • T O O L S.</p>
-          <a class="hire" href="#contact">H I R E • M E</a>
+      <section id="hero">
+        <img src="https://i.ibb.co/L50vGvP/avatar.png" alt="Profile Avatar" class="avatar">
+        <h1>Atha</h1>
+        <h2>A Front-End Developer & UI/UX Enthusiast</h2>
+        <div class="socials">
+          <a href="#" target="_blank" title="GitHub">🐙</a>
+          <a href="#" target="_blank" title="LinkedIn">💼</a>
+          <a href="#" target="_blank" title="Twitter">🐦</a>
         </div>
-
-        <aside class="card" style="text-align:center">
-          <div style="width:120px;height:120px;border-radius:0;margin:0 auto;background:var(--accent);display:flex;align-items:center;justify-content:center;color:#101828;font-weight:800;font-size:32px">A</div>
-          <div style="margin-top:12px">N I C E • T O • M E E T • Y O U • B R O ! !</div>
-        </aside>
+        <span class="tag-line">Web is fun!</span>
       </section>
 
-      <section id="about" style="margin-top:20px">
-        <div class="card">
-          <h2>A B O U T • M E</h2>
-          <p class="muted">I enjoy learning HTML, CSS, PY, JS and creating simple projects.</p>
-        </div>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>Halo! Saya Atha, seorang *Front-End Developer* dengan fokus menciptakan pengalaman pengguna yang mulus dan indah. Saya percaya bahwa web harus cepat, interaktif, dan mudah diakses oleh semua orang.</p>
+        <p>Saya mahir dalam **HTML, CSS (termasuk Tailwind CSS), dan JavaScript**. Saat ini, saya sedang mendalami **React** dan arsitektur *state management* modern. Saya suka mengubah ide menjadi antarmuka yang nyata dan fungsional.</p>
       </section>
 
-      <section id="skills" style="margin-top:20px">
-        <div class="card">
-          <h2>S K I L L S</h2>
-          <div class="skills">
-            <div class="skill">H T M L</div>
-            <div class="skill">C S S</div>
-            <div class="skill">J A V A S C R I P T</div>
-            <div class="skill">R E A C T</div>
-            <div class="skill">C A N V A S / G A M E</div>
-            <div class="skill">U I / U X</div>
+      <section id="skills">
+        <h2>Skills</h2>
+        <p>Saya berfokus pada ekosistem web modern. Beberapa teknologi yang saya kuasai:</p>
+        <ul>
+          <li>**Languages:** HTML5, CSS3, JavaScript (ES6+)</li>
+          <li>**Frameworks/Libraries:** Tailwind CSS, React.js (Basic)</li>
+          <li>**Tools:** Git, Figma, VS Code, Browser DevTools</li>
+          <li>**Concepts:** Responsive Design, UI/UX Principles, Web Performance Optimization</li>
+        </ul>
+      </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <div class="project-card">
+            <h3>Project A - Chatbot AI</h3>
+            <p>Aplikasi chat sederhana dengan fitur persona dan riwayat obrolan, dibuat dengan Vanilla JS dan Tailwind CSS.</p>
+            <a href="chatbox_ai.html" target="_blank">View Demo</a>
+          </div>
+          <div class="project-card">
+            <h3>Project B - Random Quote</h3>
+            <p>Generator kutipan motivasi acak menggunakan JavaScript murni.</p>
+            <a href="quote.html" target="_blank">View Demo</a>
+          </div>
+          <div class="project-card">
+            <h3>Project C - Text Editor</h3>
+            <p>Editor teks berbasis web dengan fitur line numbering dan dark mode.</p>
+            <a href="text_editing.html" target="_blank">View Demo</a>
+          </div>
+          <div class="project-card">
+            <h3>Project D - Solar System</h3>
+            <p>Demo embed visualisasi 3D Tata Surya dari NASA Eyes.</p>
+            <a href="solar.html" target="_blank">View Demo</a>
           </div>
         </div>
       </section>
 
-      <section id="projects" style="margin-top:20px">
-        <div class="card">
-          <h2>P R O J E C T S</h2>
-          <div class="grid">
-           <article class="project">
-              <h3>C H A T • S T R E A M</h3>
-              <p class="muted">Click to see project Chat Stream details.</p>
-             <div style="margin-top:8px"><a href="chattable.html" class="btn" target="_blank">V I E W</a></div>
-            </article>
-            <article class="project">
-              <h3>Q U O T E S</h3>
-              <p class="muted">Click to see project quotes details.</p>
-              <div style="margin-top:8px"><a href="quote.html" class="btn" target="_blank">V I E W</a></div>
-            </article>
-            <article class="project">
-              <h3> - T E X T • E D I T O R - </h3>
-              <p class="muted">Click to see project Text Editor details.</p>
-              <div style="margin-top:8px"><a href="text_editing.html" class="btn" target="_blank">V I E W</a></div>
-            </article>
-            <article class="project">
-              <h3>C H A T B O X • A I ✨</h3>
-              <p class="muted">Click to see project Text Editor details.</p>
-              <div style="margin-top:8px"><a href="chatbox_ai.html" class="btn" target="_blank">V I E W</a></div>
-            </article>
-            <article class="project">
-              <h3>S O L A R • S Y S T E M • I F R A M E</h3>
-              <p class="muted">Click to see project Solar System Iframe details.</p>
-              <div style="margin-top:8px"><a href="solar.html" class="btn" target="_blank">V I E W</a></div>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section id="contact" style="margin-top:20px">
-        <div class="card">
-          <h2>C O N T A C T</h2>
-          <p class="muted">Just go ahead and fill out the form, or, if it’s easier, send me an email: <span style="color:var(--accent)">youremail@example.com</span></p>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Tertarik bekerja sama? Kirimkan pesan Anda!</p>
           <form onsubmit="event.preventDefault();alert('Form demo. Replace with your backend or mailto link.')">
-            <input type="text" name="name" placeholder="Y O U R • N A M E" required>
-            <input type="email" name="email" placeholder="Y O U R • E M A I L" required>
-            <textarea name="message" placeholder="M E S S A G E . . ." required></textarea>
+            <input type="text" name="name" placeholder="Your name" required>
+            <input type="email" name="email" placeholder="Your email" required>
+            <textarea name="message" placeholder="Message..." required></textarea>
             <div style="display:flex;gap:8px;justify-content:flex-end">
-              <button class="btn" type="submit">S E N D</button>
+              <button class="btn" type="submit">Send</button>
             </div>
           </form>
         </div>
@@ -290,7 +162,7 @@
     </main>
 
     <footer>
-      S I M P L E • P I X E L • T E M P L A T E • B Y • A T H A • C U S T O M I Z E • F R E E
+      Simple portfolio template • Customize free
     </footer>
   </div>
 
@@ -304,11 +176,8 @@
       nav.style.position = 'absolute';
       nav.style.right = '28px';
       nav.style.top = '68px';
-      // Gaya mobile menu disesuaikan
-      nav.style.background = 'rgba(0,0,0,0.9)'; 
+      nav.style.background = 'rgba(2,6,23,0.6)';
       nav.style.padding = '10px';
-      nav.style.borderRadius = '0';
-      nav.style.border = '2px solid var(--accent)';
     }
 
     // smooth scroll for internal links
@@ -317,10 +186,15 @@
         const href = a.getAttribute('href');
         if(href.length>1){
           e.preventDefault();
-          document.querySelector(href).scrollIntoView({behavior:'smooth',block:'start'});
+          document.querySelector(href).scrollIntoView({
+            behavior: 'smooth'
+          });
+          // close mobile menu
+          const nav = document.querySelector('nav ul');
+          if(nav.style.display === 'flex') nav.style.display = 'none';
         }
       })
-    });
+    })
   </script>
 </body>
 </html>
