--- a/index.html
+++ b/index.html
@@ -118,31 +118,31 @@
 
   <div id="desktop">
     <div class="desktop-icon" onclick="openApp('chatbox_ai.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/aichatbot.jpeg" alt="Chatbot Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/chatbox_ai.png" alt="Chatbot Icon">
       <span>Chatbot AI</span>
     </div>
 
     <div class="desktop-icon" onclick="openApp('chattable.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/chat-streaemer.jpeg" alt="Chat Stream Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/streamer_chat.png" alt="Chat Stream Icon">
       <span>Chat Stream</span>
     </div>
     <div class="desktop-icon" onclick="openApp('quote.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/quotes.png" alt="Quote Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/quotes.png" alt="Quote Icon">
       <span>Quote Generator</span>
     </div>
     
     <div class="desktop-icon" onclick="openApp('text_editing.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/text_editor.png" alt="Text Editor Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/text_edit.png" alt="Text Editor Icon">
       <span>Text Editor</span>
     </div>
     
     <div class="desktop-icon" onclick="openApp('solar.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/Screenshot%202025-11-20%2009.40.35.png" alt="Solar System Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/solar.jpg" alt="Solar System Icon">
       <span>Solar System</span>
     </div>
 
     <div class="desktop-icon" onclick="openApp('about.html')">
-      <img src="https://raw.githubusercontent.com/si-Athaa/emoji/refs/heads/main/about.png" alt="About Icon">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/about.png" alt="About Icon">
       <span>About AthaOS</span>
     </div>
     </div>
