--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <div id="taskbar">
     <div id="start-button">
-      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/windowsss.png" style="display:inline;vertical-align:middle;margin-right:5px;image-rendering:pixelated;" alt="Start">
+      <img src="wow" style="display:inline;vertical-align:middle;margin-right:5px;image-rendering:pixelated;" alt="Start">
       Start
     </div>
     
