--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       font-family: monospace; /* Font pixel/monospasi */
       color: var(--text-color);
       /* Gunakan gambar sky_pixelbck.jpg sebagai wallpaper */
-      background-image: url('sky_pixel.png');
+      background-image: url('skyyyyy.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
