--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <div id="taskbar">
     <div id="start-button">
-      <img src="wow" style="display:inline;vertical-align:middle;margin-right:5px;image-rendering:pixelated;" alt="Start Icon">
+      <img src="wow" style="display:inline;vertical-align:middle;margin-right:5px;image-rendering:pixelated;" alt="Start">
       Start
     </div>
     
