--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
       <span>Solar System</span>
     </div>
 
+    <div class="desktop-icon" onclick="openApp('athaneocities.html')">
+      <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/text_edit.png" alt="Text Editor Icon">
+      <span>neocities</span>
+    </div>
+
     <div class="desktop-icon" onclick="openApp('about.html')">
       <img src="https://raw.githubusercontent.com/si-Athaa/si-atha/refs/heads/main/about.png" alt="About Icon">
       <span>About AthaOS</span>
